--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,4 @@
-# serene v5.2.0
-#
-# - docs: https://github.com/isunjn/serene/blob/latest/USAGE.md
-# - check for updates: https://github.com/isunjn/serene/releases
-#
-#=========================================================================================
+# https://github.com/isunjn/serene/blob/latest/config.example.toml
 
 base_url = "https://pen.guru"
 title = "aptenodytes"
@@ -13,8 +8,8 @@ theme = "serene"
 output_dir = "public"
 compile_sass = true
 minify_html = true
-build_search_index = false # Keep this false, search is temporarily unsupported
-generate_feeds = false # Whether to generate a feed file in root, read docs for more info about rss feed
+build_search_index = false
+generate_feeds = false
 feed_filenames = ["feed.xml"]
 taxonomies = [{ name = "tags" }]
 
@@ -37,26 +32,26 @@ paths = "on"
 taxonomies = "on"
 anchors = "on"
 
-#=========================================================================================
+# =============================================================================
 
 [extra]
 
 sections = [
-  { name = "posts", path = "/posts", is_external = false },
+  { name = "关于我", path = "/about", is_external = false },
   { name = "#entry", path = "/tags/entry", is_external = false },
   { name = "#try-catch", path = "/tags/try-catch", is_external = false },
 ]
 blog_section_path = "/posts"
 
-back_link_text = "aptenodytes::super" # Text of the back button
+back_link_text = "aptenodytes::super"
 force_theme = false # false | "light" | "dark"
 
 footer_copyright = "(surviving 2025)"
-footer_credits = true # Whether to show "Built with zola and serene" in footer
+footer_credits = true
 
 not_found_error_text = 'puts("404");exit();'
 not_found_recover_text = "← aptenodytes"
 
-reaction = false # Whether to enable anonymous emoji reactions (Note: You need to set up a working api endpoint to enable this feature)
+reaction = false
 reaction_align = "right" # "left" | "center" | "right"
 reaction_endpoint = "https://example.com/api/reaction"
