--- a/config.toml
+++ b/config.toml
@@ -46,8 +46,8 @@ blog_section_path = "/posts"
 back_link_text = "aptenodytes::super"
 force_theme = false # false | "light" | "dark"
 
-footer_copyright = "(surviving 2025)"
-footer_credits = true
+footer_copyright = "/cc-by-sa-4.0/ surviving twenty twenty-five"
+footer_credits = false
 
 not_found_error_text = 'puts("404");exit();'
 not_found_recover_text = "← aptenodytes"
